--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node -r babel-register ./index.js"
+    "start": "DEBUG=app* node -r babel-register ./index.js"
   },
   "babel": {
     "plugins": [
@@ -16,7 +16,6 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
-    "morgan": "~1.7.0",
     "route-harness": "^1.1.0",
     "serve-favicon": "~2.3.0",
     "stylus": "0.54.5"
