--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
   "dependencies": {
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
+    "cuid": "^1.3.8",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
+    "knex": "^0.12.7",
+    "request": "^2.79.0",
+    "request-promise": "^4.1.1",
     "route-harness": "^1.1.0",
     "serve-favicon": "~2.3.0",
+    "shelljs": "^0.7.6",
     "stylus": "0.54.5"
   },
   "devDependencies": {
