--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "knex": "^0.12.7",
+    "lodash": "^4.17.4",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "route-harness": "^1.1.0",
