--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "babel-register": "^6.18.0",
-    "babel-plugin-transform-async-to-generator": "^6.16.0"
+    "babel-plugin-transform-async-to-generator": "^6.16.0",
+    "tape": "^4.6.3"
   }
 }
