--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,25 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+
 orbs:
-  node: circleci/node@4.7
+  docker: circleci/docker@1.7.0
 
 jobs:
+  lint-and-build:
+    docker:
+      - image: cimg/node:8.17
+    steps:
+      - docker/build:
+          lint-dockerfile: true 
+          image: willko/knex-repl
+          path: .
+          tag: 1.1.$CIRCLE_BUILD_NUM
   build-and-test:
     docker:
       - image: cimg/node:8.17
-        auth:
-          username: $DOCKERHUB_USER
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
     steps:
       - checkout
-      - node/install-packages:
-          pkg-manager: npm
       - run:
           name: Build Images
           command: make
@@ -28,5 +33,5 @@ jobs:
 workflows:
   main:
     jobs:
+      - lint-and-build
       - build-and-test
-      # - build-test-and-deploy
