--- a/package.json
+++ b/package.json
@@ -11,24 +11,25 @@
     ]
   },
   "dependencies": {
-    "body-parser": "~1.15.1",
-    "cookie-parser": "~1.4.3",
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "cuid": "^1.3.8",
-    "debug": "~2.2.0",
-    "express": "~4.13.4",
+    "debug": "^4.3.4",
+    "express": "^4.18.1",
     "jade": "~1.11.0",
     "knex": "0.14.4",
-    "lodash": "4.17.4",
+    "lodash": "^4.17.21",
     "request": "^2.79.0",
-    "request-promise": "^4.1.1",
+    "request-promise": "^4.2.6",
     "route-harness": "^1.1.0",
     "serve-favicon": "~2.3.0",
-    "shelljs": "^0.7.6",
-    "stylus": "0.54.5"
+    "shelljs": "^0.8.5",
+    "sql-formatter": "^6.1.1",
+    "stylus": "^0.57.0"
   },
   "devDependencies": {
-    "babel-register": "^6.18.0",
     "babel-plugin-transform-async-to-generator": "^6.16.0",
+    "babel-register": "^6.18.0",
     "tape": "^4.6.3"
   }
 }
